--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /* Styles for the body */
-.funky-text {
+.customcss-1 {
 
 color: #FFFFFF;
 
@@ -12,12 +12,11 @@ text-align: LEFT;
 
 font-style: BOLD;
 
-text-decoration: underline #ffcc00;
+text-decoration: underline #FFFFFF;
 
 }
 
 body {
-	font-family:.poppins-bold {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;;
@@ -51,11 +50,12 @@ body {
 }
 
 .biography-details li::before {
-	color: #EE7623;
+	color: #FFFFFF;
 }
 
 .biography-details li, .skill-list li {
 	padding-left: 1em;
+	color: #FFFFFF
 }
 
 /* Styles for contact icons */
